using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationName
{
    public struct EnemyAnimationNames
    {
        public static readonly string Attack = "Attack";
        public static readonly string Damage = "Damage";
        public static readonly string Ultimate = "Ultimate";
        public static readonly string StanRight = "StanRight";
        public static readonly string StanLeft = "StanLeft";
        public static readonly string Down = "Down";
    }
    public struct PlayerAnimationNames
    {
        public static readonly string Kick = "Kick";
        public static readonly string Damage = "Damage";
        public static readonly string Ultimate = "Ultimate";
    }
}
